Plugin modules can now define additional sections to appear on the right-hand side of the framed theme, and new global options to appear in the System Settings categories on the left.
The default number of alias servers that new virtual server owners can create can now be set on the Server Templates page.
Removed the Plugin Modules page and the section for enabled features from the Module Config page, and merged them into a single Features and Plugins page where you can select which are enabled.
Added a button to the Spam and Virus Scanning page to configure and start clamd, so that the clamdscan virus scanner can be used to save on CPU.
---- Changes since 3.47 ----
Updated Xoops script installer to version 2.0.17.1, SugarCRM to 4.5.1f, and SquirrelMail to version 1.4.11.
Updated the Horde script installer to version 3.1.5, along with many Horde applications like IMP and Kronolith.
Domains that don't have any databases but are allowed to create one can now install scripts that have the ability to create a database.
When re-creating a domain as part of a restore, the external DNS IP address is set to match the target system, rather than being copied from the source.
Added the CA Certificate tab to the Manage SSL Certificate page, for uploading a chained cert from your CA.
If the create of the Unix user or group for a virtual server fails, both are rolled back to avoid leaving half-created users in /etc/passwd or LDAP.
Virtualmin plugins and modules that are not installed but could be are now in the right-hand frame, with a link to the Package Updates module to install them.
Updated the proxy paths page to allow proxying paths to a single URL, even on systems that don't have mod_proxy_balancer installed. For those with a module, the proxy can still be to multiple URLs.
Changed default PHPlist version to stable release 2.10.5.